power: simplify brightness changed signal generation

We can use g_variant_new_parsed() for building the inner variant
and for passing the interface string too (and we save one malloc)

https://bugzilla.gnome.org/show_bug.cgi?id=729500